--- a/style.css
+++ b/style.css
@@ -17,6 +17,13 @@ body {
     height: 300px;
     border: 1px solid red;
 }
+#container *:hover {
+    cursor: pointer;
+    background-color: #a0d6ac;
+}
+#container *{
+    user-select: none;
+}
 #display {
     width: 200px;
     height: 50px;
@@ -24,14 +31,14 @@ body {
     text-align: end;
     line-height: 50px;
 }
-#clear, #backspace {
+.clear {
     box-sizing: border-box;
     text-align: center;
     width: 50px;
     height: 50px;
     border: 1px solid #15a76a;
 }
-#backspace {
+.back {
     width: 100px;
 }
 .nums, .dot {
@@ -44,7 +51,7 @@ body {
 .zero {
     width: 100px;
 }
-.operators {
+.operators, .equality {
     box-sizing: border-box;
     width: 50px;
     height: 50px;
