--- a/style.css
+++ b/style.css
@@ -1,21 +1,43 @@
+:root {
+    --size: 56px;
+    --sizeX2: 117px;
+}
+* {
+
+    border-radius: 8px;
+}
 body {
     font-family: "Roboto", serif;
     font-weight: 700;
     font-style: normal;
+    font-size: 24px;
+    color :#f3f3f3;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* height: 100vh;
+    background-color: #111111;
+    height: 100vh;
     display: flex;
+    flex-flow: column;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
+}
+#wideContainer {
+    padding: 6px;
+    background-color: #0f0f0f;
+    width:fit-content;
+    border-radius: 4%;
 }
 #container {
+    padding: 20px;
     display: flex;
     flex-flow: row wrap;
-    width: 200px;
-    height: 300px;
-    border: 1px solid red;
+    gap: 5px;
+    width: 240px;
+    height: 380px;
+    background-color: #272727;
+    
+    border-radius: 4%;
 }
 #container *:hover {
     cursor: pointer;
@@ -25,36 +47,53 @@ body {
     user-select: none;
 }
 #display {
-    width: 200px;
-    height: 50px;
-    border: 1px solid black;
+    box-sizing: border-box;
+    width: 250px;
+    height: 80px;
+    padding: 16px;
     text-align: end;
     line-height: 50px;
+    background-color: #585858;
 }
 .clear {
     box-sizing: border-box;
     text-align: center;
-    width: 50px;
-    height: 50px;
-    border: 1px solid #15a76a;
+    width: var(--size);
+    height: var(--size);
+    /* border: 1px solid #15a76a; */
+    line-height: 50px;
+    background-color: #6b2e38;
+}
+.clearAll {
+    background-color: #b83232;
 }
 .back {
-    width: 100px;
+    width: var(--sizeX2);
 }
 .nums, .dot {
     box-sizing: border-box;
-    width: 50px;
-    height: 50px;
-    border: 1px solid #15a76a;
+    width: var(--size);
+    height: var(--size);
+    /* border: 1px solid #15a76a; */
     text-align: center;
+    line-height: 50px;
+    background-color: #17526b;
 }
 .zero {
-    width: 100px;
+    width: var(--sizeX2);
+    line-height: 50px;
 }
 .operators, .equality {
     box-sizing: border-box;
-    width: 50px;
-    height: 50px;
-    border: 1px solid #15a76a;
+    width: var(--size);
+    height: var(--size);
+    /* border: 1px solid #15a76a; */
     text-align: center;
+    line-height: 50px;
+    background-color: #ca6c15;
+}
+.operators {
+}
+.equality {
+    background-color: #1675f1;
 }
