-fixed auto complete bug then: in 88- typing any other operation will overwrite '-', e.g. 88+ instead of 88-+ now: works correctly -improved equals interaction then: 88 (pressing equals or enter will result in syntax error) now: 88 (pressing equals or enter will return 88)

--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ body {
     padding: 16px;
     text-align: end;
     line-height: 50px;
-    background-color: #585858;
+    background-color: #a0d6ac;
+    color: #222222;
 }
 .clear {
     box-sizing: border-box;
